<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Pink Circle Backgrounds -->

    <View
        android:id="@+id/pinkCircle1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/pink_circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pinkCircle2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/pink_circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pinkCircle3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-20dp"
        android:background="@drawable/pink_circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        style="@style/TextDescription"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextTitle"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_onboard"
        android:textAlignment="center"

        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextDescription"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/your_safety_is_our_mission_together_let_s_create_a_safer_world_for_every_woman"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/name"
        style="@style/TextDescription"
        android:autofillHints="name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textColorHint="@color/black"
        android:layout_marginBottom="11dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/enter_your_full_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        style="@style/TextDescription"
        android:layout_width="350dp"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/enter_your_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/contact"
        style="@style/TextDescription"
        android:textColorHint="@color/black"
        android:autofillHints="phone"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <EditText
        android:id="@+id/password"
        style="@style/TextDescription"
        android:autofillHints="password"
        android:textColorHint="@color/black"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767"
       />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="325dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_button"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />
<ProgressBar
    android:id="@+id/progress_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparent"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sign_in"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/pink_primary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

</androidx.constraintlayout.widget.ConstraintLayout>