<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fontFamily="@font/poppins_semibold"
    android:background="@android:color/white"
    tools:context=".Emergency">

    <!-- Reusable Style for Helpline Rows -->
    <!-- Each row is a horizontal LinearLayout inside a ConstraintLayout -->

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:contentDescription="Logo"
        android:src="@drawable/arista_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="TOLL FREE NUMBERS"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <TextView
        android:id="@+id/subtitleText"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Your safety is our mission.\nWho do you want to SMS?"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <LinearLayout
        android:id="@+id/policeLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/rounded_button"
        android:gravity="center_vertical"
        android:onClick="callPolice"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Police"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginEnd="8dp"
            android:text="@string/_100"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/policeman" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ambulanceLayout"
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:gravity="center_vertical"
        android:onClick="callAmbulance"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policeLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_weight="1"
            android:text="@string/ambulance"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_102"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/ambulancee"
            android:fontFamily="@font/poppins_semibold"
            android:src="@drawable/ambulance" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/childLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/rounded_button"
        android:gravity="center_vertical"
        android:onClick="callChildHelpline"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambulanceLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_weight="1"
            android:text="@string/child_helpline"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginEnd="8dp"
            android:text="@string/_1098"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/boy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/womenLayout"
        android:layout_width="0dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:gravity="center_vertical"
        android:onClick="callWomenHelpline"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_weight="1"
            android:text="@string/women_helpline"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginEnd="8dp"
            android:text="@string/_1091"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/women" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emergencySMS"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="544dp"
        android:background="@drawable/rounded_button"
        android:gravity="center_vertical"
        android:onClick="sendEmergencySMS"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick">

        <TextView
            android:layout_width="0dp"
            android:id="@+id/click"
            android:onClick="many"
            android:fontFamily="@font/poppins_semibold"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emergency_sms"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="OnClick" />


    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="200dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_height="wrap_content"
        android:layout_marginTop="624dp"
        android:background="@android:color/black"
        android:onClick="goBack"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/new1"
        android:layout_width="82dp"
        android:layout_height="23dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="644dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/new2"
        android:layout_width="91dp"
        android:layout_height="20dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="624dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
